correct floodlight tag, hide z-index, bottom right. remove white top border on countdown

--- a/assets/styles/home.scss
+++ b/assets/styles/home.scss
@@ -136,6 +136,19 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+
+
+   iframe{
+    .floodlight{
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        display: none;
+        z-index: -1;
+    }
+}
+
+
    //Removes border from image links on firefox
    a{
     outline: none;
@@ -1521,7 +1534,6 @@ nav{
     -ms-background-size: cover;
     background-size: cover;
     color: white;
-    border-top: 1px solid white;
     text-align: center;
     h1{
         margin-top: 30%;
@@ -2857,7 +2869,6 @@ nav{
     -o-background-size: cover;
     background-size: cover;
     color: white;
-    border-top: 1px solid white;
     text-align: center;
     h1{
         margin-top: 5%;
